--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     depends_on:
      - tango-db
   tango-rest:
-     image: hzgde/mtangorest.server:rc4
+     image: hzgde/mtangorest.docker:rc4
      ports:
       - "10001:10001"
      environment:
