--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,9 @@ before_install:
   - docker-compose --version
 
 before_script:
-  - docker-compose up
+  - docker-compose up -d
+  #TODO wait-for-it
+  - sleep 30
   - docker ps
 
 script:
