--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
      ports:
       - "10001:10001"
      environment:
-      - TANGO_HOST=localhost:10000
+      - TANGO_HOST=tango-cs:10000
      links:
       - "tango-cs:localhost"
      depends_on:
