--- a/pom.xml
+++ b/pom.xml
@@ -5,15 +5,39 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.tango-controls</groupId>
-    <artifactId>rest-test-suite-rc4</artifactId>
-    <version>0.1-SNAPSHOT</version>
-    <description>A compatibility test suite for Tango REST API implementations</description>
+    <artifactId>rest-api-rc4</artifactId>
+    <version>0.2-SNAPSHOT</version>
+    <description>Tango REST API Java reference implementation</description>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <resteasy.version>3.1.2.Final</resteasy.version>
+        <slf4j.version>1.7.5</slf4j.version>
+    </properties>
+
+    <scm>
+        <connection>scm:git:git@github.com:tango-controls/rest-api.git</connection>
+        <developerConnection>scm:git:git@github.com:tango-controls/rest-api.git</developerConnection>
+        <url>https://github.com/tango-controls/rest-api</url>
+        <tag>HEAD</tag>
+    </scm>
+
+    <distributionManagement>
+        <repository>
+            <id>bintray-tango-controls</id>
+            <url>https://api.bintray.com/maven/tango-controls/maven/RestApi;publish=1/</url>
+        </repository>
+    </distributionManagement>
 
     <developers>
         <developer>
             <id>ingvord</id>
             <name>Igor khokhriakov</name>
-            <email>tla-ingvord@yandex.ru</email>
+            <email>mail@ingvord.ru</email>
+            <roles>
+                <role>Maintainer</role>
+            </roles>
         </developer>
     </developers>
 
@@ -25,16 +49,15 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.tango</groupId>
-            <artifactId>rest-api-rc4</artifactId>
-            <version>0.1</version>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>1.1.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>11.0.2</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
@@ -43,37 +66,85 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-core</artifactId>
-            <version>1.1.2</version>
-            <scope>test</scope>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-client</artifactId>
+            <version>${resteasy.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-jackson-provider</artifactId>
+            <version>${resteasy.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.tango</groupId>
+            <artifactId>ezTangORB</artifactId>
+            <version>LATEST</version>
         </dependency>
     </dependencies>
 
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <source>1.7</source>
                     <target>1.7</target>
-                    <encoding>UTF-8</encoding>
+                    <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
             </plugin>
             <plugin>
+                <artifactId>maven-source-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-release-plugin</artifactId>
+            </plugin>
+            <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
             </plugin>
         </plugins>
     </build>
 
-    <repositories>
-        <repository>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <id>bintray-hzgde-hzg-wpn-projects</id>
-            <name>bintray</name>
-            <url>http://dl.bintray.com/hzgde/hzg-wpn-projects</url>
-        </repository>
-    </repositories>
+    <profiles>
+        <profile>
+            <id>test-suite</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <skip>false</skip>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
