--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.tango-controls</groupId>
@@ -24,7 +25,7 @@
     <distributionManagement>
         <repository>
             <id>bintray-tango-controls</id>
-            <url>https://api.bintray.com/maven/tango-controls/maven/RestApi;publish=1/</url>
+            <url>https://api.bintray.com/maven/tango-controls/maven/RestApi/;publish=1</url>
         </repository>
     </distributionManagement>
 
