--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
     <developers>
         <developer>
             <id>ingvord</id>
-            <name>Igor khokhriakov</name>
+            <name>Igor Khokhriakov</name>
             <email>mail@ingvord.ru</email>
             <roles>
                 <role>Maintainer</role>
