--- a/api-java/pom.xml
+++ b/api-java/pom.xml
@@ -8,8 +8,8 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>rest-api-rc5</artifactId>
-    <description>Tango REST API RC5 Java reference</description>
+    <artifactId>rest-api</artifactId>
+    <description>Tango REST API Java reference </description>
 
     <properties>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -18,7 +18,7 @@
     <distributionManagement>
         <repository>
             <id>bintray-tango-controls</id>
-            <url>https://api.bintray.com/maven/tango-controls/rest/rest-api-rc5/;publish=1</url>
+            <url>https://api.bintray.com/maven/tango-controls/rest/rest-api/;publish=1</url>
         </repository>
     </distributionManagement>
 
@@ -73,5 +73,7 @@
         </dependency>
     </dependencies>
 
+    
 
+    
 </project>
