--- a/api-java/pom.xml
+++ b/api-java/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.tango-controls</groupId>
         <artifactId>rest-api-bom</artifactId>
-        <version>1.0</version>
+        <version>1.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>rest-api</artifactId>
